src/main/java/com/example/copro/global/error/exception/AccessDeniedGroupException.java
package com.example.copro.global.error.exception;

public abstract class AccessDeniedGroupException extends RuntimeException{
    public AccessDeniedGroupException(String message) {
        super(message);
    }
}
